@@ -1,3 +1,10 @@
+Mon Mar 13 03:07:31 MST 2006  David Trowbridge <trowbrds@gmail.com>
+
+	* src/fe-gnome/conversation-panel.c:
+	* src/fe-gnome/userlist-gui.c:
+	* data/xchat-gnome-ui.xml:
+	  - Improve the user context menu situation (#333473).
+
 Mon Mar 13 02:24:10 MST 2006  David Trowbridge <trowbrds@gmail.com>
 
 	* src/fe-gnome/conversation-panel.c:
